# ldbgames

./: flake.nix  ldbgames.nix  overlay.nix  pyproject.toml
modules/: default.nix  ldbgames.nix
modules/emulators/: default.nix  duckstation.nix
pkgs/: ldbgames.nix
src/ldbgames/: __init__.py  aria2cpython.py  cli.py  installed.py  requests.py  settings.py  shortcuts.py
